Add trust messaging: no fees, no affiliate hijacking, no data selling

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -229,6 +229,36 @@
       <p style="color: var(--text-muted);">"Finally ditched Linktree. LinkHub does everything I need for free." - @sarahcreates</p>
     </div>
 
+    <!-- Trust / No Hidden Fees Section -->
+    <div style="margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #1a1a2e, #16213e); border-radius: 1rem; border: 1px solid var(--border);">
+      <h2 style="text-align: center; margin-bottom: 0.5rem;">What We DON'T Do</h2>
+      <p style="text-align: center; color: var(--text-muted); margin-bottom: 2rem;">Unlike other link-in-bio tools, we actually respect creators.</p>
+
+      <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem;">
+        <div style="text-align: center; padding: 1rem;">
+          <div style="font-size: 2rem; margin-bottom: 0.5rem;">💰</div>
+          <h3 style="margin-bottom: 0.5rem;">Zero Transaction Fees</h3>
+          <p style="color: var(--text-muted); font-size: 0.9rem;">Sell products through your links. We take 0%. Your money is YOUR money.</p>
+        </div>
+
+        <div style="text-align: center; padding: 1rem;">
+          <div style="font-size: 2rem; margin-bottom: 0.5rem;">🔗</div>
+          <h3 style="margin-bottom: 0.5rem;">No Affiliate Hijacking</h3>
+          <p style="color: var(--text-muted); font-size: 0.9rem;">We never inject our affiliate codes into your links. Your commissions stay yours.</p>
+        </div>
+
+        <div style="text-align: center; padding: 1rem;">
+          <div style="font-size: 2rem; margin-bottom: 0.5rem;">🔒</div>
+          <h3 style="margin-bottom: 0.5rem;">No Data Selling</h3>
+          <p style="color: var(--text-muted); font-size: 0.9rem;">Your audience data is never sold, shared, or used for ads. Period.</p>
+        </div>
+      </div>
+
+      <p style="text-align: center; margin-top: 1.5rem; color: var(--text-muted); font-size: 0.875rem;">
+        We make money from optional Pro upgrades. That's it. You're the customer, not the product.
+      </p>
+    </div>
+
     <div class="faq">
       <h2>Frequently Asked Questions</h2>
 
